zen garden, added a div for left bamboo background. adjusted css

--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -33,11 +33,12 @@
       </div>   
     </header>
     <div class="leftContent">
+      
       <div class="left" id="leftIntro">
         <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
         <p id="exampleLinkP">Download the example <a href="#">HTML FILE</a> and <a href="#">CSS FILE</a></p>
       </div>
-      <div class="left">
+      <div class="left" id="leftIntro">
         <h3>THE ROAD TO ENLIGHTENMENT</h3>
         <p>Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.</p>
         <p>We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WASP, and the major browser creators.</p>
@@ -46,7 +47,7 @@
           Become one with the web.
         </p>
       </div>
-      <div class="left">
+      <div class="left" id="leftIntro">
         <h3>SO WHAT IS THIS ABOUT?</h3>
         <p>There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. 
           Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.
@@ -56,23 +57,26 @@
           Designers and coders alike have contributed to the beauty of the web; we can always push it further.
         </p>
       </div>
-      <div class="left" id="leftBamboo">
-        <h3>PARTICIPATION</h3>
-        <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. 
-          Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.
-        </p>
-        <p>You may modify the style sheet in any way you wish, but not the HTML. 
-          This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.
-        </p>
-        <p>Download the sample <a>HTML</a> and <a>CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. 
-          <a>Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.
-        </p>
-      </div>
-      <div class="left" id="leftBamboo">
-        <h3>BENEFITS</h3>
-        <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. 
-          This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
-        </p>
+
+      <div class="leftBamboo">  
+        <div class="left" id="leftBamboo">
+          <h3>PARTICIPATION</h3>
+          <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. 
+            Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.
+          </p>
+          <p>You may modify the style sheet in any way you wish, but not the HTML. 
+            This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.
+          </p>
+          <p>Download the sample <a>HTML</a> and <a>CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. 
+            <a>Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.
+          </p>
+        </div>
+        <div class="left" id="leftBamboo">
+          <h3>BENEFITS</h3>
+          <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. 
+            This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
+          </p>
+        </div>
       </div>
       <div class="left">
         <h3>REQUIREMENTS</h3>
