disign a blog template created

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Design a Blog</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
 
-    
+<body>
+    <div class="siteWrap">
+        <nav>
+            <button>Home</button><button>Team</button><button>News</button><button>News</button><button>Help</button>
+        </nav>
+        <header>
+            <h1>Design a Blog</h1>
+            <p> blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content</p>
+        </header>
+        <main>
+            <button class="clickBlog">
+                <h3>Blog Title</h3>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+            </button>
+            <button class="clickBlog">
+                <h3>Blog Title</h3>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+            </button>
+            <button class="clickBlog">
+                <h3>Blog Title</h3>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+            </button>
+            <button class="clickBlog">
+                <h3>Blog Title</h3>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+            </button>
+            <button id=viewMore>View More</button></main>
+        <footer>
+            <h2>This is the Footer</h2>
+            <p>this is the footer content this is the footer content this is the footer content this is the footer content </p>
+            <input id="footInput" type="text" value="Submit it Here" />
+        </footer>
+    </div>
 </body>
+
 </html>
