made Nav bar fixed

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -16,7 +16,9 @@
         </nav>
         <header>
             <h1>Design a Blog</h1>
-            <p> blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content blog content</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta iure rerum asperiores, veritatis exercitationem magnam voluptatibus! Nam culpa, et eligendi corrupti repellat accusantium reiciendis magnam!
+            </p>
         </header>
         <main>
             <button class="clickBlog">
