styled and made responsive

--- a/design-a-blog/index.html
+++ b/design-a-blog/index.html
@@ -11,36 +11,52 @@
 
 <body>
     <div class="siteWrap">
-        <nav>
-            <button>Home</button><button>Team</button><button>News</button><button>News</button><button>Help</button>
+        <nav class="navTab">
+            <button class="navButtons">Home</button>
+            <button class="navButtons">Team</button>
+            <button class="navButtons">News</button>
+            <button class="navButtons">Help</button>
         </nav>
         <header>
-            <h1>Design a Blog</h1>
+            <h1 class="titleHeader">learnToCode()</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta iure rerum asperiores, veritatis exercitationem magnam voluptatibus! Nam culpa, et eligendi corrupti repellat accusantium reiciendis magnam!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, enim cumque est explicabo soluta
+                iure rerum asperiores, veritatis exercitationem magnam voluptatibus! Nam culpa, et eligendi corrupti
+                repellat accusantium reiciendis magnam!
             </p>
         </header>
         <main>
-            <button class="clickBlog">
+            <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/330771/pexels-photo-330771.jpeg?cs=srgb&dl=code-coding-computer-330771.jpg&fm=jpg); background-size: cover;">
                 <h3>Blog Title</h3>
-                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will
+                    go here 
+                </p>
             </button>
-            <button class="clickBlog">
+            <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
                 <h3>Blog Title</h3>
-                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will
+                    go here 
+                </p>
             </button>
-            <button class="clickBlog">
+            <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
                 <h3>Blog Title</h3>
-                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will
+                    go here 
+                </p>
             </button>
-            <button class="clickBlog">
+            <button class="clickBlog" style="background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-size: cover;">
                 <h3>Blog Title</h3>
-                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will go here </p>
+                <p>Blog contents will go here Blog contents will go here Blog contents will go here Blog contents will
+                    go here 
+                </p>
             </button>
-            <button id=viewMore>View More</button></main>
+        </main>
+        <button class="viewMore">View More</button>
         <footer>
             <h2>This is the Footer</h2>
-            <p>this is the footer content this is the footer content this is the footer content this is the footer content </p>
+            <p>this is the footer content this is the footer content this is the footer content this is the footer
+                content 
+            </p>
             <input id="footInput" type="text" value="Submit it Here" />
         </footer>
     </div>
